--- a/StMarket/src/main/res/layout/activity_seleciona_recebimento_frios.xml
+++ b/StMarket/src/main/res/layout/activity_seleciona_recebimento_frios.xml
@@ -35,6 +35,32 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="20px"/>
 
+        <android.widget.TableLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:shrinkColumns="*"  android:stretchColumns="*" >
+
+            <TableRow>
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Placa"
+                    android:id="@+id/btnOrd1"/>
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Fornecedor"
+                    android:id="@+id/btnOrd2"/>
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Nota"
+                    android:id="@+id/btnOrd3"/>
+            </TableRow>
+
+        </android.widget.TableLayout>
+
         <ScrollView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
